# sdl2-ttf

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE-MIT  README.md  SDL-ttf.cabal  SDL2-ttf.cabal  configure  configure.ac  sdl2-ttf.cabal  stack.yaml
cbits/: rendering.c  rendering.h
examples/: PrintEvents.hs  font_test.hs
includes/: HsSDL-ttfConfig.h.in
src/Graphics/UI/SDL/: TTF.hsc
src/Graphics/UI/SDL/TTF/: FFI.hsc  Types.hsc
src/SDL/: TTF.hsc
src/SDL/TTF/: FFI.hsc  Internals.hsc  Types.hsc
test/: font_test.c  font_test.hs
